# rrdb

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: coverage.yml  pr_test.yml  release.yml  review_stats.yml
bench/: .gitignore  Cargo.toml  README.md
bench/src/: generate.rs  main.rs
bench/src/db/: mod.rs  rrdb.rs
benches/: index_benchmark.rs
docs/superpowers/plans/: 2026-07-19-wal-filesystem-injection.md  2026-07-19-wal-multi-segment-replay.md
docs/superpowers/specs/: 2026-07-19-wal-filesystem-injection-design.md  2026-07-19-wal-multi-segment-replay-design.md
rrdb/: database.config
src/: constants.rs  errors.rs  lib.rs  main.rs  test.rs
src/ast/: mod.rs  predule.rs
src/ast/commands/: connect.rs  mod.rs
src/ast/ddl/: alter_database.rs  alter_table.rs  create_database.rs  create_index.rs  create_table.rs  drop_database.rs  drop_table.rs  mod.rs
src/ast/dml/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
src/ast/other/: desc_table.rs  show_databases.rs  show_tables.rs  use_database.rs
src/ast/tcl/: begin_transaction.rs  commit.rs  mod.rs  rollback.rs
src/ast/types/: column.rs  data_types.rs  expression.rs  foreign_key.rs  function.rs  index.rs  mod.rs  select_column.rs  statement.rs  table.rs
src/command/: AGENTS.md  README.md  commands.rs  daemon.rs  init.rs  mod.rs  run.rs
src/common/: AGENTS.md  command.rs  fs.rs
src/config/: AGENTS.md  launch_config.rs  mod.rs
src/constants/: README.md  mod.rs  predule.rs
src/engine/: AGENTS.md  expression.rs  initialize.rs  mod.rs  row_buffer.rs  types.rs
src/engine/actions/: etc.rs  index.rs  mod.rs
src/engine/ast/: mod.rs
src/engine/encoder/: mod.rs  schema_encoder.rs
src/engine/index/: btree.rs  manager.rs  mod.rs  page.rs  page_btree.rs  page_store.rs
src/engine/lexer/: operator_token.rs  predule.rs  tokenizer.rs  tokens.rs
src/engine/optimizer/: cost.rs  mod.rs  optimizer.rs  predule.rs  statistics.rs
src/engine/parser/: mod.rs  parser.rs
src/engine/schema/: database.rs  mod.rs  row.rs  table.rs
src/engine/server/: channel.rs  mod.rs  shared_state.rs
src/engine/storage/: mod.rs  page.rs  table_heap.rs
src/engine/wal/: mod.rs  recovery.rs  types.rs
src/errors/: AGENTS.md  execute_error.rs  into_error.rs  lexing_error.rs  mod.rs  parsing_error.rs  predule.rs  server_error.rs  type_error.rs  wal_errors.rs
src/executor/: common.rs  executor.rs  initializer.rs  mocking.rs  mod.rs  predule.rs  reduce.rs  result.rs  util.rs
src/executor/config/: README.md  global.rs  mod.rs  row.rs  table.rs
src/executor/encoder/: storage.rs
src/executor/implements/: mod.rs
src/lexer/: README.md  operator_token.rs  tokenizer.rs  tokens.rs
src/lexer/test/: comment.rs  select.rs
src/lib/: mod.rs
src/lib/ast/: README.md  mod.rs  predule.rs
src/lib/config/: database.rs  global.rs  table.rs
src/lib/constants/: predule.rs  server.rs
src/lib/errors/: README.md  execute_error.rs  into_error.rs  lexing_error.rs  mod.rs  parsing_error.rs  predule.rs  server_error.rs  type_error.rs
src/lib/executor/: README.md  common.rs  core.rs  executor.rs  mod.rs  predule.rs  reduce.rs  result.rs  util.rs
src/lib/lexer/: README.md  mod.rs  operator_token.rs  predule.rs  tokenizer.rs  tokens.rs
src/lib/logger/: logger.rs  mod.rs  predule.rs
src/lib/optimizer/: README.md  core.rs  mod.rs  optimizer.rs  predule.rs
src/lib/parser/: README.md  context.rs  core.rs  mod.rs  parser.rs  predule.rs
src/lib/pgwire/: README.md  mod.rs  predule.rs
src/lib/plan/: README.md
src/lib/server/: channel.rs  client.rs  core.rs  mod.rs  option.rs  (+4 more)
src/logger/: logger.rs
src/optimizer/: README.md  optimizer.rs
src/parser/: parser.rs
src/pgwire/: AGENTS.md  predule.rs
src/server/: README.md  channel.rs  mod.rs  option.rs  predule.rs  server.rs
src/utils/: AGENTS.md  collection.rs  env.rs  float.rs  macos.rs  mod.rs  path.rs  predule.rs
src/wal/: endec.rs  format.rs  manager.rs  mod.rs  prelude.rs  record.rs  transaction.rs  types.rs  wal.rs
(+442 files in other folders)
