[package]
name = "rrdb"
version = "0.0.0" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "ready" 
keywords = ["db", "database", "sql"] 
edition = "2018" 
license = "MIT" 
include = ["src/main.rs", "src/lib", "Cargo.toml"]
exclude = []
readme = "README.md" 
repository = "https://github.com/myyrakle/rrdb"
documentation = "https://github.com/myyrakle/rrdb/blob/master/README.md"
homepage = "https://github.com/myyrakle/rrdb/blob/master/README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.3", features = ["derive"] }
atty = { version = "0.2.14", optional = true }
structopt = { version = "0.3.18", optional = true }

[[bin]]
name = "rrdb"
path = "./src/main.rs"
required-features = ["rrdb"]

[features]
default = ["rrdb"]
rrdb = ["cli"]
cli = ["atty", "structopt"]