[package]
name = "rrdb"
version = "0.0.2" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "ready" 
keywords = ["db", "database", "sql"] 
edition = "2021" 
license = "MIT" 
include = ["src/*", "Cargo.toml"]
exclude = []
readme = "README.md" 
repository = "https://github.com/myyrakle/rrdb"
documentation = "https://github.com/myyrakle/rrdb/blob/master/README.md"
homepage = "https://github.com/myyrakle/rrdb/blob/master/README.md"

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
clap = { version = "3.1.3", features = ["derive"] }
atty = { version = "0.2.14", optional = true }
structopt = { version = "0.3.18", optional = true }
serde = { version = "1", features = ["derive"] }
toml = "0.5.9"
dyn-clone = "1.0.4"
derive_builder = "0.10.2"
path-absolutize = "3.0.13"
whoami = "1.2.1"
thiserror = "1.0.32"
async-trait = "0.1.80"
bytes = "1.2.1"
tokio-util = { version = "0.7.4", features = [ "codec" ] }
futures = "0.3.23"
chrono = "0.4.22"
bson = "2.11.0"
time = "0.3.36"
colored = "2.0.0"
uuid = "1.1.2"
itertools = "0.10.5"
anyhow = "1.0.86"
mockall = "0.12.1"
bitcode = "0.6.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[[bin]]
name = "rrdb"
path = "./src/main.rs"
required-features = ["rrdb"]

[[bin]]
name = "test"
path = "./src/test.rs"

[features]
default = ["rrdb"]
rrdb = ["cli"]
cli = ["atty", "structopt"]
